<resources>
    <string name="app_name">PixE</string>
    <string name="take_photo_label">Take a Photo!</string>
    <string name="choose_picture_label">Choose a Picture!</string>
    <string name="about_label">About</string>
    <string name="donate_label">Donate</string>
    <string name="upgrade_label">Upgrade</string>
    <string name="generate_label">Generate</string>
    <string name="algorithm_label">Algorithm</string>
    <string name="algo_red">Sort by red value</string>
    <string name="algo_blue">Sort by blue value</string>
    <string name="algo_green">Sort by green value</string>
    <string name="orientation_vertical">Vertical</string>
    <string name="orientation_horizontal">Horizontal</string>
    <string name="orientation_label">Orientation</string>
    <string name="reset_label">Reset</string>
    <string name="save_label">Save</string>
    <string name="share_label">Share</string>
    <string name="history_label">History</string>
    <string name="phone_init">Phone # to share with</string>
    <string name="date_label">Date</string>
    <string name="rgb_label">RGB</string>
    <string name="version_label">Version</string>
    <string name="about_string">Image Accident has a long, proud history starting in January 2020. We develop wholesome, nutritious apps using only the finest hand-picked bits. Check out our donate page to give us a hand!</string>
</resources>
